--- a/Web.config
+++ b/Web.config
@@ -6,7 +6,10 @@
   -->
 
 <configuration>
-
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+  
   <connectionStrings>
     <add name="MyDbConn" connectionString="Server=Omar-Laptop\sqlexpress; Database=DBProjectFinal2; Trusted_Connection=Yes;" />
     <add name="DBProjectFinal2ConnectionString" connectionString="Data Source=OMAR-LAPTOP\SQLEXPRESS;Initial Catalog=DBProjectFinal2;Integrated Security=True"
