--- a/Web.config
+++ b/Web.config
@@ -7,17 +7,27 @@
 
 <configuration>
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
-
+  
   <connectionStrings>
-    <add name="MyDbConn" connectionString="Server=Omar-PC\sqlexpress; Database=DBProjectFinal2; Trusted_Connection=Yes;"/>
+    <add name="MyDbConn" connectionString="Server=Omar-Laptop\sqlexpress; Database=DBProjectFinal2; Trusted_Connection=Yes;" />
     <add name="DBProjectFinal2ConnectionString" connectionString="Data Source=OMAR-LAPTOP\SQLEXPRESS;Initial Catalog=DBProjectFinal2;Integrated Security=True"
-      providerName="System.Data.SqlClient"/>
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <system.web>
-    <compilation debug="true" targetFramework="4.6.1"/>
-    <httpRuntime targetFramework="4.6.1"/>
-  </system.web>
+    <system.web>
+      <compilation debug="true" targetFramework="4.6.1"/>
+      <httpRuntime targetFramework="4.6.1"/>
+    </system.web>
+    <system.codedom>
+        <compilers>
+            <compiler language="c#;cs;csharp" extension=".cs"
+                type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+                warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701"/>
+            <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
+                type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+                warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+        </compilers>
+    </system.codedom>
 
 </configuration>
